--- a/task-web/package.json
+++ b/task-web/package.json
@@ -43,12 +43,14 @@
     "react-router": "2.7.0",
     "redux": "^3.7.1",
     "redux-logger": "2.7.4",
-    "stylelint-config-standard": "^16.0.0","stylelint-order": "^0.2.2",
+    "style-loader": "0.18.2",
+    "stylelint-config-standard": "^16.0.0",
+    "stylelint-order": "^0.2.2",
     "stylelint-scss": "^1.4.1",
     "stylelint-webpack-plugin": "^0.5.1",
-    "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.3",
     "url-loader": "0.5.9",
+    "uuid": "^3.1.0",
     "webpack": "2.6.1",
     "webpack-dev-server": "2.5.0",
     "webpack-manifest-plugin": "1.1.0",
@@ -57,6 +59,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "node-sass": "^3.4.2",
     "sass-loader": "^6.0.6"
   },
   "scripts": {
